<resources>
    <string name="app_name">Avallie</string>
    <string name="notification_description">Description</string>
    <string name="menu_products">Produtos</string>
    <string name="menu_cart">Carrinho</string>
    <string name="server_error">Sem conexão com a internet</string>
    <string name="productsFragment_search_products">Buscar produto</string>
    <string name="menu_search_title">Buscar</string>
    <string name="productAddDialog_manufacturer_hint">Marca de preferência</string>
    <string name="productAddDialog_unity">Quantidade em</string>
    <string name="productAddDialog_add">Adicionar</string>
    <string name="cancel">Cancelar</string>
    <string name="productAddDialog_observations_hint">Observações</string>
    <string name="try_again">Tentar novamente</string>
    <string name="required_field">Campo obrigatório</string>
    <string name="productAddCart_no_observation">Sem observação</string>
    <string name="productAddDialog_product_added_to_cart">Produto adicionado ao carrinho</string>
    <string name="productAddDialog_no_manufacturer">Sem fabricante de preferência</string>
    <string name="cartFragment_title">produtos selecionados</string>
    <string name="cartFragment_single_item_cart">1 produto selecionado</string>
    <string name="cartInfo_email">Email *</string>
    <string name="cartInfo_name">Nome *</string>
    <string name="cartInfo_cpf">CPF *</string>
    <string name="cartInfo_phone">Telefone *</string>
    <string name="cartInfo_address_hint">Endereço</string>
    <string name="cartInfo_city_hint">Cidade *</string>
    <string name="cartInfo_number_hint">Número *</string>
    <string name="cartInfo_deadline_info">Prazo de entrega</string>
    <string name="cartInfo_request_budget">Solicitar orçamento</string>
    <string name="cartInfo_confirmation">Confirmação</string>
    <string name="cartInfo_generalInfos">Informações gerais</string>
    <string name="cartInfo_delivery_infos">Entrega</string>
    <string name="update">Atualizar</string>
    <string name="emptyCart_select_products_button">Selecionar produtos</string>
    <string name="emptyCart_message">Parece que você ainda não selecionou nenhum produto ainda...</string>
    <string name="emptyCart_title">Seu carrinho está vazio!</string>
    <string name="product_not_found_title">Nenhum produto encontrado</string>
    <string name="product_not_found_message">Tente pesquisar por outro nome ;)</string>
    <string name="successContent_title">Solicitação realizada!</string>
    <string name="succesContent_message">Em breve você receberá um email com todas as informações da sua solicitação.
    </string>
    <string name="addBudgetRequest_sending_request">Enviando solicitação</string>
    <string name="response_fail">Falha na solicitação</string>
    <string name="response_fail_content">Não foi possível realizar sua solicitação neste momento, tente novamente mais
        tarde.
    </string>
    <string name="categoriesDialog_apply">Aplicar</string>
    <string name="categoriesDialog_title">Selecione as categorias desejadas</string>
    <string name="categoriesDialog_neutraltext">Remover</string>
    <string name="filter_categories">Categorias</string>
    <string name="filter_construction_phase">Fases de obra</string>
    <string name="filter_select_categorie">Selecione pelo menos uma categoria</string>
    <string name="budget">Orçamentos</string>
    <string name="account">Conta</string>
    <string name="quantity">Quantidade</string>
    <string name="specs">Especificações</string>
    <string name="add_products">Adicionar produto</string>
    <string name="products">Produtos</string>
    <string name="cart">Carrinho</string>
    <string name="confirm_products">Confirmar produtos</string>
    <string name="password">Senha *</string>
    <string name="enter">Entrar</string>
    <string name="forgot_password">Esqueci minha senha</string>
    <string name="no_account_question">Não possui cadastro?</string>
    <string name="create_account">Criar conta</string>
    <string name="sing_up">Cadastro</string>
    <string name="name">Nome *</string>
    <string name="next">Próximo</string>
    <string name="company_name">Nome da empresa</string>
    <string name="cep">CEP *</string>
    <string name="street">Rua *</string>
    <string name="estado">Estado *</string>
    <string name="confirm_password">Confirmar senha *</string>
    <string name="cpf">CPF *</string>
    <string name="company_info">Informações da sua empresa</string>
    <string name="personal_info">Informações pessoais</string>
    <string name="access_info">Informações de acesso</string>
    <string name="passwords_not_matching">Senhas não são iguais</string>
    <string name="fill_the_fileds">Preencha os campos acima</string>
    <string name="finishing_register">Finalizando cadastro</string>
    <string name="standar_delivery_address">Endereço de entrega padrão</string>
    <string name="finish_request">Finalizar orçamento</string>
    <string name="request_name">Nome da solicitação</string>
    <string name="delivery_address">Endereço de entrega</string>
    <string name="change_address">Alterar endereço</string>
    <string name="order_budget_request">Solicitar orçamento</string>
    <string name="waiting_message">Finalizando solicitação, por favor aguarde</string>
    <string name="success_exclamation">Sucesso!</string>
    <string name="request_budget_success">Sua solicitação de orçamento foi realizada.</string>
    <string name="follow_request">Acompanhar solicitação</string>
    <string name="ops_exclamation">Ops!</string>
    <string name="budget_requests">Solicitações de orçamento</string>
    <string name="requested_products">Produtos solicitados</string>
    <string name="no_avaiable_budgets">Nenhum orçamento disponível até agora.</string>
    <string name="category_label">Categoria</string>
    <string name="total_label">Total</string>

    <string name="unity_label">%s %s</string>
    <string name="payment_type_label">Formas de pagamento</string>
    <string name="delivery_label">Entrega</string>
    <string name="loading_avaiable_budgets_label">Carregando orçamentos disponíveis</string>
    <string name="ops_layout_description">Ocorreu um erro ao realizar sua solicitação</string>
    <string name="no_product_found_label">Nenhum produto encontrado</string>

    <string name="register">Cadastrar</string>
    <string name="welcome_to_avallie_label">Bem vindo a Avallie!</string>
    <string name="welcome_text_label">Agora você pode orçar sua obra com diversos fornecedores de maneira muito simples</string>
    <string name="start_label">Começar</string>
    <string name="my_account">Minha conta</string>
    <string name="name_label">Nome</string>
    <string name="state">Estado</string>
    <string name="logout_label">Sair</string>
    <string name="loading_account_label">Carregando suas informações</string>
    <string name="budgets">Orçamentos</string>
    <string name="additional_address_hint">Complemento</string>
    <string name="cep_error">Erro ao consultar CEP</string>
    <string name="preference_brand_label">Marca de preferência</string>
    <string name="update_product">Atualizar produto</string>
    <string name="confirm_add_product_title">Você não preenchou todas as especificações!</string>
    <string name="confirm_add_product_description">É importante detalher ao máximo o seu produto para que o fornecedor consiga orçar seu pedido. Deseja continuar mesmo assim?</string>
    <string name="request_name_hint">Ex: Reforma da casa</string>
    <string name="request_deadline_hint">Ex: 12/04/2020</string>
    <string name="max_date_hint">Data máxima de entrega</string>
    <string name="extra_information">Informações extras</string>
    <string name="search_address_number">Buscar endereço e número</string>
    <string name="additional_address_help">casa/apto/bloco</string>
    <string name="confirm_address">Confirmar endereço</string>
    <string name="multiple_address">Endereços</string>
    <string name="my_address">Meus endereços</string>
    <string name="my_delivery_address">Meus endereços de entrega</string>
    <string name="new_address">Novo endereço</string>

</resources>
