<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/add_product_name"
            fontPath="Demi-bold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Barra de aço"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/amount_container"
            fontPath="Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/quantity">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/amount"
                fontPath="Regular.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_container"
            fontPath="Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/preference_brand_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brand"
                fontPath="Regular.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/specs_title"
            fontPath="Medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/specs"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/specs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" />

        <carbon.widget.Button
            android:id="@+id/add_product"
            style="@style/PrimaryButton"
            fontPath="Medium.otf"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add_products" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>