<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/infinity_border_top"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="32dp"
        android:paddingEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/address_title"
            fontPath="Medium.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="Avenida Polar \n 91040550, Porto Alegre - RS" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/number_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            fontPath="Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/cartInfo_number_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/additional_address_container"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            fontPath="Regular.otf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/additional_address_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            fontPath="Regular.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/additional_address_help"
            android:textColor="@color/grayPrimary"
            android:textSize="12sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="12dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <carbon.widget.Button
                android:id="@+id/confirm_address_button"
                style="@style/NewPrimaryButton"
                fontPath="Medium.otf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/new_primary_button_bg"
                android:text="@string/confirm_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


